fix dot flicker on some browsers

--- a/the402.css
+++ b/the402.css
@@ -19,6 +19,9 @@ __additional-code: S. I. Hartmann
 html {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
 }
 
 body {
